--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "bootstrap-drawer": "^1.0.6"
   }
 }
