--- a/bower.json
+++ b/bower.json
@@ -17,10 +17,11 @@
     "chai": "^3.5.0",
     "mocha": "^3.2.0",
     "bootstrap-drawer": "^1.0.6",
-    "bootstrap-treeview": "^v1.2.0"
+    "bootstrap-treeview": "^v1.2.0",
+    "gridstack": "^0.2.6"
   },
   "resolutions": {
     "bootstrap": "~4.0.0-alpha.6",
-    "jquery": ">=1.9.1"
+    "jquery": ">=1.6"
   }
 }
