Getting the HTML from the ajax.

--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
     "chai": "^3.5.0",
     "mocha": "^3.2.0",
     "bootstrap-drawer": "^1.0.6",
-    "bootstrap-treeview": "^v1.2.0"
+    "bootstrap-treeview": "^1.2.0"
   },
   "resolutions": {
     "bootstrap": "~4.0.0-alpha.6",
