- Added more components to drawer

--- a/app/components.json
+++ b/app/components.json
@@ -1,14 +1,31 @@
 [
   {
     "name": "button"
-  },  
+  },
   {
     "name": "input.text"
-  },  
+  },
+  {
+    "name": "input.text"
+  },
   {
     "name": "select"
-  },  
+  },
   {
-    "name": "text"
+    "name": "alert"
+  },
+  {
+    "name": "badge"
+  },
+  {
+    "name": "label.primary"
+  },
+  {
+    "name": "label.success"
+  },   {
+    "name": "label.warning"
+  },
+  {
+    "name": "thumbnail"
   }
 ]
