--- a/app/components.json
+++ b/app/components.json
@@ -1,25 +1,1 @@
-[
-  {
-    "name": "button"
-  },
-  {
-    "name": "input.text"
-  },
-  {
-    "name": "alert"
-  },
-  {
-    "name": "badge"
-  },
-  {
-    "name": "label.primary"
-  },
-  {
-    "name": "label.success"
-  },   {
-    "name": "label.warning"
-  },
-  {
-    "name": "thumbnail"
-  }
-]
+[{"name":"button"},{"name":"input.text"},{"name":"alert"},{"name":"badge"},{"name":"label.primary"},{"name":"label.success"},{"name":"label.warning"},{"name":"thumbnail"},{"name":"qwwqw"}]
