--- a/app/components.json
+++ b/app/components.json
@@ -1,1 +1,1 @@
-[{"name":"button"},{"name":"input.text"},{"name":"alert"},{"name":"badge"},{"name":"label.primary"},{"name":"label.success"},{"name":"label.warning"},{"name":"thumbnail"},{"name":"qwwqw"}]
+[{"name":"button"},{"name":"input.text"},{"name":"alert"},{"name":"badge"},{"name":"label.primary"},{"name":"label.success"},{"name":"label.warning"},{"name":"thumbnail"},{"name":"qwwqw"},{"name":"grid_l_2_3p"}]
